// Loaf operational state schema.
// Source of truth: internal/state/migrations/*.sql.
// This mirror is guarded by TestSchemaDocumentationMirrorsExecutableMigration,
// which validates it against the auto-applied baseline (migrations 0001-0009
// and 0011).
//
// Journal-first end state (migration 0010, SPEC-056):
//   Migration 0010 is the explicit, out-of-band journal-first transformation. It
//   is deliberately excluded from the auto-applied set (SchemaMigrations()) and
//   runs only via `loaf state migrate journal-first --apply`, so the guarded
//   baseline below still carries the pre-0010 session structures. The tables and
//   columns listed here as struck through by 0010 are the ONLY delta between this
//   baseline and the shipped runtime after the migration has been applied:
//     - DROP TABLE sessions
//     - DROP TABLE session_state_snapshots
//     - journal_entries: drop the session_id FK column (harness_session_id, a
//       plain provenance tag, becomes the sole conversation correlator)
//     - handoffs: replace the session_id FK column with harness_session_id TEXT
//       (plain provenance tag, no FK)
//     - journal_search (FTS5): the session_id UNINDEXED column is renamed to
//       harness_session_id UNINDEXED
//   Migration SQL (source of truth): internal/state/migrations/0010_journal_first.sql.
//
// Journal provenance exception (migration 0011): journal_origins and
// journal_deferrals intentionally do not foreign-key journal_entries or sparks,
// because migration 0010 may rebuild journal_entries after 0011 has applied.

Table schema_migrations {
  version integer [pk, not null]
  name text [not null]
  checksum text [not null]
  applied_at text [not null]
}

Table projects {
  id text [pk, not null]
  identity_hash text [not null, unique]
  created_at text [not null]
  updated_at text [not null]
  friendly_name text
  current_path text
  last_seen_at text
}

Table project_paths {
  id text [pk, not null]
  project_id text [not null, ref: > projects.id]
  path text [not null, unique]
  is_current integer [not null]
  first_seen_at text [not null]
  last_seen_at text [not null]
  created_at text [not null]
  updated_at text [not null]
  indexes {
    (project_id, is_current)
    (project_id) [unique, note: 'where is_current = 1']
  }
}

Table aliases {
  id text [pk, not null]
  project_id text [not null, ref: > projects.id]
  entity_kind text [not null]
  entity_id text [not null]
  namespace text [not null]
  alias text [not null]
  created_at text [not null]
  updated_at text [not null]
  indexes {
    (project_id, namespace, alias) [unique]
    (project_id, entity_kind, entity_id)
  }
}

Table specs {
  id text [pk, not null]
  project_id text [not null, ref: > projects.id]
  title text [not null]
  status text [not null]
  body_source_id text [ref: > sources.id]
  created_at text [not null]
  updated_at text [not null]
  branch text
  source text
}

Table tasks {
  id text [pk, not null]
  project_id text [not null, ref: > projects.id]
  spec_id text [ref: > specs.id]
  title text [not null]
  status text [not null]
  priority text
  body_source_id text [ref: > sources.id]
  created_at text [not null]
  updated_at text [not null]
  indexes {
    (project_id, spec_id)
  }
}

Table ideas {
  id text [pk, not null]
  project_id text [not null, ref: > projects.id]
  title text [not null]
  status text [not null]
  body_source_id text [ref: > sources.id]
  created_at text [not null]
  updated_at text [not null]
}

Table sparks {
  id text [pk, not null]
  project_id text [not null, ref: > projects.id]
  scope text
  status text [not null]
  text text [not null]
  source_id text [ref: > sources.id]
  created_at text [not null]
  updated_at text [not null]
}

Table brainstorms {
  id text [pk, not null]
  project_id text [not null, ref: > projects.id]
  title text [not null]
  status text [not null]
  body_source_id text [ref: > sources.id]
  created_at text [not null]
  updated_at text [not null]
}

Table shaping_drafts {
  id text [pk, not null]
  project_id text [not null, ref: > projects.id]
  title text [not null]
  status text [not null]
  body_source_id text [ref: > sources.id]
  created_at text [not null]
  updated_at text [not null]
}

Table sessions {
  id text [pk, not null]
  project_id text [not null, ref: > projects.id]
  harness_session_id text
  branch text
  status text [not null]
  body_source_id text [ref: > sources.id]
  created_at text [not null]
  updated_at text [not null]
}

Table session_state_snapshots {
  id text [pk, not null]
  project_id text [not null, ref: > projects.id]
  session_id text [not null, ref: > sessions.id]
  content text [not null]
  observed_branch text
  observed_worktree text
  created_at text [not null]
  updated_at text [not null]
  indexes {
    (project_id, session_id) [unique]
    (project_id, session_id)
  }
}

Table artifact_bodies {
  id text [pk, not null]
  project_id text [not null, ref: > projects.id]
  entity_kind text [not null]
  entity_id text [not null]
  body_kind text [not null, default: 'markdown']
  content text [not null]
  content_hash text [not null]
  source_id text [ref: > sources.id]
  created_at text [not null]
  updated_at text [not null]
  indexes {
    (project_id, entity_kind, entity_id, body_kind) [unique]
    (project_id, entity_kind, entity_id)
    (project_id, source_id)
  }
}

Table artifact_search {
  rowid integer [pk]
  project_id text
  entity_kind text
  entity_id text
  body_kind text
  content text
}

Table journal_search {
  rowid integer [pk]
  project_id text
  journal_entry_id text
  session_id text
  entry_type text
  scope text
  message text
}

Table docs_index {
  id text [pk, not null]
  project_id text [not null, ref: > projects.id]
  path text [not null]
  content text [not null]
  content_hash text [not null]
  indexed_ref text
  indexed_worktree text [not null]
  indexed_at text [not null]
  created_at text [not null]
  updated_at text [not null]
  indexes {
    (project_id, indexed_worktree, path) [unique]
    (project_id, path)
    (project_id, indexed_worktree)
  }
}

Table docs_search {
  rowid integer [pk]
  project_id text
  id text
  path text
  content text
}

Table reports {
  id text [pk, not null]
  project_id text [not null, ref: > projects.id]
  report_kind text [not null]
  title text [not null]
  status text [not null]
  body_source_id text [ref: > sources.id]
  created_at text [not null]
  updated_at text [not null]
}

Table runs {
  id text [pk, not null]
  project_id text [not null, ref: > projects.id]
  generator_ref text [not null]
  generator_version text
  generator_hash text
  status text [not null]
  metadata text
  started_at text
  completed_at text
  created_at text [not null]
  updated_at text [not null]
  indexes {
    (project_id, generator_ref, status)
  }
}

Table findings {
  id text [pk, not null]
  project_id text [not null, ref: > projects.id]
  report_id text [not null, ref: > reports.id]
  run_id text [ref: > runs.id]
  title text [not null]
  status text [not null]
  severity text [not null]
  confidence text [not null]
  dimension text
  path text
  line_start integer
  line_end integer
  symbol text
  metadata text
  created_at text [not null]
  updated_at text [not null]
  indexes {
    (project_id, report_id)
    (project_id, run_id)
    (project_id, severity, status, confidence)
  }
}

Table verdicts {
  id text [pk, not null]
  project_id text [not null, ref: > projects.id]
  finding_id text [not null, ref: > findings.id]
  run_id text [ref: > runs.id]
  outcome text [not null]
  rationale text [not null]
  reproduction_notes text
  metadata text
  created_at text [not null]
  updated_at text [not null]
  indexes {
    (project_id, finding_id)
    (project_id, run_id)
  }
}

Table plans {
  id text [pk, not null]
  project_id text [not null, ref: > projects.id]
  spec_id text [ref: > specs.id]
  title text [not null]
  status text [not null]
  body_source_id text [ref: > sources.id]
  created_at text [not null]
  updated_at text [not null]
  indexes {
    (project_id, spec_id)
  }
}

Table handoffs {
  id text [pk, not null]
  project_id text [not null, ref: > projects.id]
  session_id text [ref: > sessions.id]
  task_id text [ref: > tasks.id]
  title text [not null]
  status text [not null]
  body_source_id text [ref: > sources.id]
  created_at text [not null]
  updated_at text [not null]
  indexes {
    (project_id, session_id, task_id)
  }
}

Table councils {
  id text [pk, not null]
  project_id text [not null, ref: > projects.id]
  spec_id text [ref: > specs.id]
  title text [not null]
  status text [not null]
  body_source_id text [ref: > sources.id]
  created_at text [not null]
  updated_at text [not null]
  indexes {
    (project_id, spec_id)
  }
}

Table journal_entries {
  id text [pk, not null]
  project_id text [not null, ref: > projects.id]
  entry_type text [not null]
  scope text
  message text [not null]
  observed_branch text
  observed_worktree text
  harness_session_id text
  session_id text [ref: > sessions.id]
  spec_id text [ref: > specs.id]
  task_id text [ref: > tasks.id]
  created_at text [not null]
  updated_at text [not null]
  indexes {
    (project_id, session_id, spec_id, task_id)
  }
}

Table journal_origins {
  journal_entry_id text [pk, not null]
  project_id text [not null, ref: > projects.id]
  envelope_version integer [not null]
  capture_mechanism text [not null]
  observed_harness text
  observed_harness_version text
  harness_session_id text
  agent_id text
  source_event text
  branch text
  worktree text
  head text
  change_path text
  change_sha256 text
  dirty integer
  reconstructable integer
  durable_result_kind text
  durable_result_id text
  created_at text [not null]
  indexes {
    (project_id, capture_mechanism, created_at)
    (project_id, observed_harness, harness_session_id)
    (project_id, change_path)
    (project_id, durable_result_kind, durable_result_id)
  }
}

Table journal_deferrals {
  project_id text [not null, ref: > projects.id]
  operation_key text [not null]
  journal_entry_id text [not null, unique]
  spark_id text [not null, unique]
  stored_digest text [not null]
  created_at text [not null]
  indexes {
    (project_id, operation_key) [pk]
  }
}

Table events {
  id text [pk, not null]
  project_id text [not null, ref: > projects.id]
  entity_kind text [not null]
  entity_id text [not null]
  event_type text [not null]
  from_status text
  to_status text
  note text
  created_at text [not null]
  updated_at text [not null]
  indexes {
    (project_id, entity_kind, entity_id)
  }
}

Table relationships {
  id text [pk, not null]
  project_id text [not null, ref: > projects.id]
  from_entity_kind text [not null]
  from_entity_id text [not null]
  to_entity_kind text [not null]
  to_entity_id text [not null]
  relationship_type text [not null]
  reason text
  created_at text [not null]
  updated_at text [not null]
  origin text
  source_id text
  source_field text
  indexes {
    (project_id, from_entity_kind, from_entity_id)
    (project_id, to_entity_kind, to_entity_id)
    (project_id, origin)
  }
}

Table tags {
  id text [pk, not null]
  project_id text [not null, ref: > projects.id]
  name text [not null]
  created_at text [not null]
  updated_at text [not null]
  indexes {
    (project_id, name) [unique]
  }
}

Table entity_tags {
  id text [pk, not null]
  project_id text [not null, ref: > projects.id]
  tag_id text [not null, ref: > tags.id]
  entity_kind text [not null]
  entity_id text [not null]
  created_at text [not null]
  updated_at text [not null]
  indexes {
    (project_id, tag_id, entity_kind, entity_id) [unique]
    (project_id, entity_kind, entity_id)
  }
}

Table bundles {
  id text [pk, not null]
  project_id text [not null, ref: > projects.id]
  slug text [not null]
  title text [not null]
  tag_query text
  created_at text [not null]
  updated_at text [not null]
  indexes {
    (project_id, slug) [unique]
  }
}

Table bundle_members {
  id text [pk, not null]
  project_id text [not null, ref: > projects.id]
  bundle_id text [not null, ref: > bundles.id]
  entity_kind text [not null]
  entity_id text [not null]
  created_at text [not null]
  updated_at text [not null]
  indexes {
    (project_id, bundle_id, entity_kind, entity_id) [unique]
  }
}

Table sources {
  id text [pk, not null]
  project_id text [not null, ref: > projects.id]
  source_kind text [not null]
  path text [not null]
  hash text
  line_start integer
  line_end integer
  imported_at text
  created_at text [not null]
  updated_at text [not null]
  indexes {
    (project_id, path)
  }
}

Table backend_mappings {
  id text [pk, not null]
  project_id text [not null, ref: > projects.id]
  backend text [not null]
  entity_kind text [not null]
  entity_id text [not null]
  external_kind text [not null]
  external_id text [not null]
  external_url text
  sync_status text [not null]
  created_at text [not null]
  updated_at text [not null]
  indexes {
    (project_id, backend, external_kind, external_id) [unique]
    (project_id, entity_kind, entity_id)
  }
}

Table hook_events {
  id text [pk, not null]
  project_id text [not null, ref: > projects.id]
  hook_id text [not null]
  hook_phase text [not null]
  command text
  exit_code integer
  message text
  created_at text [not null]
  updated_at text [not null]
  indexes {
    (project_id, hook_id, hook_phase)
  }
}

Table exports {
  id text [pk, not null]
  project_id text [not null, ref: > projects.id]
  export_kind text [not null]
  format text [not null]
  path text [not null]
  state_version integer
  source_entity_kind text
  source_entity_id text
  generated_at text [not null]
  created_at text [not null]
  updated_at text [not null]
  indexes {
    (project_id, source_entity_kind, source_entity_id)
  }
}

// Intent and Exploration foundation (migration 0012). Every table below is an
// append-only operational fact: stable IDs plus created_at with no updated_at
// column (intent_operations carries updated_at only for its projection-version
// advance). intent_operations.journal_entry_id/spark_id and
// journal_conversation_handles.journal_entry_id intentionally have no FK
// because migration 0010 may rebuild journal_entries after 0012 has applied.

Table intents {
  id text [pk, not null]
  project_id text [not null, ref: > projects.id]
  created_at text [not null]
  indexes {
    (project_id, created_at)
  }
}

Table intent_snapshots {
  id text [pk, not null]
  project_id text [not null, ref: > projects.id]
  intent_id text [not null, ref: > intents.id]
  seq integer [not null]
  title text [not null]
  body text [not null]
  content_digest text [not null]
  created_at text [not null]
  indexes {
    (intent_id, seq) [unique]
  }
}

Table intent_deferrals {
  id text [pk, not null]
  project_id text [not null, ref: > projects.id]
  intent_id text [not null, ref: > intents.id]
  operation_key text [not null]
  body text [not null]
  why text [not null]
  boundary text [not null]
  revisit_trigger text [not null]
  stored_digest text [not null]
  created_at text [not null]
  indexes {
    (project_id, operation_key) [unique]
    (intent_id, created_at)
  }
}

Table intent_dispositions {
  id text [pk, not null]
  project_id text [not null, ref: > projects.id]
  intent_id text [not null, ref: > intents.id]
  seq integer [not null]
  disposition text [not null]
  reason text
  deferral_id text [ref: > intent_deferrals.id]
  supersedes_deferral_id text [ref: > intent_deferrals.id]
  created_at text [not null]
  indexes {
    (intent_id, seq) [unique]
  }
}

Table intent_operations {
  project_id text [not null, ref: > projects.id]
  operation_key text [not null]
  intent_id text [not null, ref: > intents.id]
  stored_digest text [not null]
  journal_entry_id text
  spark_id text
  projection_version integer [not null]
  created_at text [not null]
  updated_at text [not null]
  indexes {
    (project_id, operation_key) [pk]
    (intent_id)
  }
}

Table explorations {
  id text [pk, not null]
  project_id text [not null, ref: > projects.id]
  title text [not null]
  created_at text [not null]
  indexes {
    (project_id, created_at)
  }
}

Table exploration_checkpoints {
  id text [pk, not null]
  project_id text [not null, ref: > projects.id]
  exploration_id text [not null, ref: > explorations.id]
  seq integer [not null]
  purpose text [not null]
  conclusions text [not null]
  unresolved text [not null]
  next_action text [not null]
  operation_key text
  content_digest text [not null]
  created_at text [not null]
  indexes {
    (exploration_id, seq) [unique]
    (project_id, operation_key) [unique]
  }
}

Table exploration_checkpoint_items {
  id text [pk, not null]
  project_id text [not null, ref: > projects.id]
  checkpoint_id text [not null, ref: > exploration_checkpoints.id]
  item_type text [not null]
  position integer [not null]
  content text [not null]
  created_at text [not null]
  indexes {
    (checkpoint_id, position) [unique]
  }
}

Table logical_conversations {
  id text [pk, not null]
  project_id text [not null, ref: > projects.id]
  title text [not null]
  operation_key text
  created_at text [not null]
  indexes {
    (project_id, operation_key) [unique]
  }
}

Table conversation_handles {
  id text [pk, not null]
  project_id text [not null, ref: > projects.id]
  conversation_id text [not null, ref: > logical_conversations.id]
  harness text [not null]
  handle text [not null]
  locality text
  created_at text [not null]
  indexes {
    (conversation_id, harness, handle) [unique]
  }
}

Table conversation_log_refs {
  id text [pk, not null]
  project_id text [not null, ref: > projects.id]
  handle_id text [not null, ref: > conversation_handles.id]
  locator text [not null]
  content_hash text
  range_spec text
  created_at text [not null]
  indexes {
    (handle_id, locator) [unique]
  }
}

Table exploration_conversations {
  id text [pk, not null]
  project_id text [not null, ref: > projects.id]
  exploration_id text [not null, ref: > explorations.id]
  conversation_id text [not null, ref: > logical_conversations.id]
  created_at text [not null]
  indexes {
    (exploration_id, conversation_id) [unique]
    (conversation_id)
  }
}

Table journal_conversation_handles {
  id text [pk, not null]
  project_id text [not null, ref: > projects.id]
  journal_entry_id text [not null]
  handle_id text [not null, ref: > conversation_handles.id]
  created_at text [not null]
  indexes {
    (journal_entry_id, handle_id) [unique]
    (handle_id)
  }
}

Table source_availability_observations {
  id text [pk, not null]
  project_id text [not null, ref: > projects.id]
  subject_kind text [not null]
  subject_id text [not null]
  observed_at text [not null]
  observer text
  locality text
  available integer [not null]
  note text
  created_at text [not null]
  indexes {
    (subject_kind, subject_id, observed_at)
  }
}
